feat(): add initial pages and servlets